# math_2410

./: README.md  pyproject.toml
math_2410/part_2/: 2.1.ipynb  2.2.2.py  matrix ops.ipynb
math_2410/part_2/2.2/: 2.2.ipynb
math_2410/part_2/2.3/: 2.3.ipynb
math_2410/part_3/: 3.1.ipynb  3.2.ipynb  3.3.ipynb  Euler's Method (working).ipynb
math_2410/part_3/3.3/: 3.3 Euler's Method.ipynb
math_2410/part_4/: 4.3.ipynb
math_2410/part_4/4.2/: 4.2.ipynb  4.2_angelo.ipynb
math_2410/part_4/4.3/: 4.1 Eigenvals Decomposition.ipynb
