[project]
name = "math-2410"
version = "0.1.0"
description = "MATH 2410Q: Differential Equations at UConn (Spring 2025)."
authors = [
    {name = "gordonbchen",email = "gordonbchen@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "sympy (>=1.13.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false
